# for-twenty-readers

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  TODO.md  app.db  boot.sh  calculation.py  config.py  create_xls.py  pyproject.toml  requirements.txt  setup.cfg  start_docker.sh
.github/: dependabot.yml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: __init__.py  calculation.py  easter_ru.py  forms.py  models.py  routes.py
app/templates/: 404.html  500.html  add_year.html  base.html  edit_profile.html  link_file.html  user.html
docker/: Dockerfile
migrations/versions/: 96990cf02986_posts_table.py  e140b1f751a9_users_table.py
src/: __main__.py  config.py  const.py  easter_ru.py  service_layer.py
src/entrypoints/: fastapi_app.py  routers.py
src/entrypoints/templates/: base.html  calendar.html  link_file.html
tests/: conftest.py  test_get_xls.py  test_routers.py
